--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/resources/**
 
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
 server.tomcat.additional-tld-skip-patterns=hk2-utils.jar,javax.annotation-api.jar,javax.inject.jar,hk2-api.jar,config-types.jar,hk2-core.jar,hk2-config.jar,tiger-types.jar,validation-api.jar,jboss-logging.jar,classmate.jar,hk2-locator.jar,javassist.jar,hk2-runlevel.jar,class-model.jar,asm-all-repackaged.jar
-
 
 #DATA SOURCE I BAZA DANYCH
 spring.datasource.url=jdbc:mysql://localhost:3306/mojabaza
@@ -27,13 +29,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
 
+
 # Internacjonalizacja
 spring.messages.always-use-message-format=false
 spring.messages.basename=messages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=true
-
 
 # Logging
 logging.level.org.springframework.web=DEBUG
